# requirements.java

./: .gitignore  .hgignore  3rd-party-licenses.txt  CLA.md  CORPORATE-CLA.md  LICENSE-3RD-PARTY.md  README.md  licenseheader.txt  nb-configuration.xml  pmd-file-exclusions.properties  pmd.xml  pom.xml  todo.md
.github/workflows/: build-on-push.yml  build.yml  cla.yml  deploy_to_maven_central.yml  reusable-build.yml
10.0/docs/api/: allclasses-index.html  allpackages-index.html  element-list  help-doc.html  index-all.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  search.html  serialized-form.html  type-search-index.js
10.1/docs/api/: allclasses-index.html  allpackages-index.html  help-doc.html  index-all.html  index.html  overview-summary.html  overview-tree.html  search.html  serialized-form.html
10.2/docs/api/: allclasses-index.html  allpackages-index.html  help-doc.html  index-all.html  index.html  overview-summary.html  overview-tree.html  search.html  serialized-form.html
6.0.0/docs/api/: allclasses-index.html  allpackages-index.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  serialized-form.html  system-properties.html  type-search-index.js
6.0.2/docs/api/: allclasses-index.html  allpackages-index.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  member-search-index.js  module-search-index.js  overview-summary.html  overview-tree.html  package-search-index.js  serialized-form.html  system-properties.html
6.0.3/docs/api/: allclasses-index.html  allpackages-index.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-summary.html  overview-tree.html  serialized-form.html  system-properties.html  type-search-index.js
6.0.4/docs/api/: allclasses-index.html  allpackages-index.html  constant-values.html  deprecated-list.html  element-list  help-doc.html  index-all.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  serialized-form.html  system-properties.html  type-search-index.js
6.1.0/docs/api/: allclasses-index.html  allpackages-index.html  constant-values.html  deprecated-list.html  element-list  help-doc.html  index-all.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  package-search-index.js  serialized-form.html  type-search-index.js
7.0.0/docs/api/: allclasses-index.html  allpackages-index.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  serialized-form.html  type-search-index.js
8.0.1/docs/api/: allclasses-index.html  allpackages-index.html  constant-values.html  deprecated-list.html  element-list  help-doc.html  index-all.html  index.html  member-search-index.js  module-search-index.js  overview-summary.html  overview-tree.html  package-search-index.js  serialized-form.html  type-search-index.js
8.0.10/docs/api/: allclasses-index.html  allpackages-index.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  serialized-form.html
8.0.3/docs/api/: allclasses-index.html  allpackages-index.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  serialized-form.html
8.0.5/docs/api/: allclasses-index.html  allpackages-index.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  member-search-index.js  overview-summary.html  (+3 more)
annotation/: pom.xml
annotations/: pom.xml
benchmark/: benchmark.xlsx  history.txt  pom.xml
benchmark/assertj/: pom.xml
benchmark/core-with-asserts/: pom.xml
benchmark/core-without-asserts/: pom.xml
benchmark/guava/: pom.xml
benchmark/guava-with-asserts/: pom.xml
benchmark/guava-without-asserts/: pom.xml
benchmark/java/: pom.xml
benchmark/java-with-asserts/: pom.xml
benchmark/java-without-asserts/: pom.xml
cla/version1/: individual-cla.md
code-generator/: pom.xml
code_generator/: pom.xml
config/: checkstyle.xml  missing-licenses.txt  pmd-file-exclusions.properties  pmd.xml
core/: pom.xml
deploy/: pom.xml
docs/: Building.md  Changelog.md  Colored_Diff.md  Design_Notes.md  Features.md  Jenkins_Configuration_-_MacOS_10.15_(Catalina).md  Jenkins_Configuration_-_Ubuntu_20.04.3_LTS.md  Jenkins_Configuration_-_Windows10.md  Performance.md  Supported_Libraries.md  changelog.md  design_notes.md  features.md  supported_libraries.md  supported_tools.md  textual_diff.md
generated_api/: pom.xml
guava/: pom.xml
jackson/: pom.xml
java/: pom.xml
jenkins/Requirements (release)/: config.xml
jenkins/requirements (deploy)/: config.xml
jenkins/requirements (release)/: config.xml
jenkins/requirements (snapshot)/: config.xml
licenses/: format.ftl  missing.txt  override.txt
lint/: pmd-main.xml  pmd.xml
maven-plugin/: pom.xml
maven_plugin/: pom.xml
native/: pom.xml
native/src/main/cpp/: CMakeLists.txt
native/src/main/cpp/include/requirements/: NativeTerminal.h  Terminal.h  Util.h
native/src/main/cpp/source/requirements/: NativeTerminal.cpp  Terminal.cpp  Util.cpp
natives/: pom.xml
natives/src/main/cpp/: CMakeLists.txt
natives/src/main/cpp/include/requirements/: NativeTerminal.h  Util.h
natives/src/main/cpp/source/requirements/: NativeTerminal.cpp  Util.cpp
test/: pom.xml
wiki/: Building.md  Changelog.md  Colored_Diff.md  Deploying_Native_Libraries.md  Features.md  Jenkins_Configuration_-_MacOS_10.12_(Sierra).md  Jenkins_Configuration_-_MacOS_10.15_(Catalina).md  Jenkins_Configuration_-_Ubuntu_16.04_LTS.md  Jenkins_Configuration_-_Ubuntu_20.04.3_LTS.md  Jenkins_Configuration_-_Windows10.md  Performance.md  String_Diff.md  Supported_Libraries.md  Supported_Tools.md  Textual_Diff.md  Third_Party_Licenses.md  pom.xml
(+12901 files in other folders)
